# Rinsed-Snowflake-Data-Client

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  QUERY_DOCUMENTATION.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  validate_against_frontend.py  validate_against_v4b.py  validate_membership_revenue_daily.py  validate_recharge_churn.py
api/client/: index.html
api/exceptions/: index.html
api/models/: index.html
docs/: index.md
docs/api/: client.md  exceptions.md  models.md
docs/guides/: churn.md  cohorts.md  error-handling.md  getting-started.md  raw-queries.md  sites.md  stats.md
guides/churn/: index.html
guides/cohorts/: index.html
guides/error-handling/: index.html
guides/getting-started/: index.html
guides/raw-queries/: index.html
guides/sites/: index.html
guides/stats/: index.html
search/: search_index.json
src/rinsed_snowflake_client/: __init__.py  _client.py  _config.py  _connection.py  _exceptions.py  _filters.py  _query_builder.py
src/rinsed_snowflake_client/resources/: __init__.py  _cohorts.py  _sites.py  _stats.py
src/rinsed_snowflake_client/types/: __init__.py  _base.py  _cohorts.py  _sites.py  _stats.py
tests/: conftest.py  test_client.py  test_config.py  test_filters.py  test_stats.py
